--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -29,11 +29,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="browse.html">Browse</a>
+                    <a class="nav-link active" href="browse.html">Browse</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -56,20 +56,45 @@
         </div>
     </nav>
 
-    <!-- Home Page Content -->
+    <!-- Browse Page Content -->
     <div class="container text-center py-5">
         <div class="row">
-            <div class="col-3">
+            <!-- Item Filter Section -->
+            <div class="col-4">
                 <div class="card">
-                    <h3 class="card-header">Recent Orders</h3>
+                    <h3 class="card-header">Filters</h3>
                     <div class="card-block">
-                        <p class="card-text">You must be signed in to view recent orders.</p>
+                        <form class="py-3">
+                            <div class="form-group">
+                                <label for="ratingFilter" class="col-form-label">Rating:</label>
+                                <select class="custom-select" id="ratingFilter">
+                                    <option value="1" selected>1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <label for="priceMin" class="col-6 col-form-label">Price Min:</label>
+                                    <input type="number" id="priceMin" class="col-6 form-control" placeholder="Min">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <label for="priceMax" class="col-6 col-form-label">Price Max:</label>
+                                    <input type="number" id="priceMax" class="col-6 form-control" placeholder="Max">
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-            <div class="col-9">
+            <!-- Item Viewer Section -->
+            <div class="col-8">
                 <div class="card">
-                    <h3 class="card-header">Featured Items</h3>
+                    <h3 class="card-header">Items</h3>
                     <div class="card-block">
                         <h4 class="card-title">No Items Available</h4>
                     </div>
