--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Home</title>
+    <title>Create Account</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS -->
@@ -29,7 +29,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signin.html">Sign In</a>
+                    <a class="nav-link active" href="signin.html">Sign In</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -56,26 +56,28 @@
         </div>
     </nav>
 
-    <!-- Home Page Content -->
-    <div class="container text-center py-5">
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <h3 class="card-header">Recent Orders</h3>
-                    <div class="card-block">
-                        <p class="card-text">You must be signed in to view recent orders.</p>
-                    </div>
-                </div>
+    <!-- Create Account Form -->
+    <div class="container text-center w-25 py-5">
+        <form>
+            <div class="form-group">
+                <h2 class="form-signin-heading">Create Account</h2>
             </div>
-            <div class="col-9">
-                <div class="card">
-                    <h3 class="card-header">Featured Items</h3>
-                    <div class="card-block">
-                        <h4 class="card-title">No Items Available</h4>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label for="inputEmail" class="sr-only">Email Address</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required="" autofocus="">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+            </div>
+            <div class="form-group">
+                <label for="inputConfirmPassword" class="sr-only">Confirm Password</label>
+                <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Comfirm Password" required="">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-dark btn-block" type="submit">Create Account</button>
+            </div>
+        </form>
     </div>
 
 </body>
