--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signin.html">Sign In</a>
+                    <a class="nav-link" href="/signin">Sign In</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
