--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,10 +30,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="/index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="browse.html">Browse</a>
+                    <a class="nav-link" href="/browse">Browse</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signin.html">Sign In</a>
+                    <a class="nav-link" href="/signin">Sign Out</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
