Got recent orders working

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,9 +62,12 @@
             <div class="col-3">
                 <div class="card">
                     <h3 class="card-header">Recent Orders</h3>
-                    <div class="card-block">
-                        <p class="card-text">You must be signed in to view recent orders.</p>
-                    </div>
+                    <th:block th:each="order: ${orders}">
+	                    <div class="card-block">
+	                        <span class="card-text">Order #:</span>
+	                        <span class="card-text" th:text=${order.orderId}></span>
+	                    </div>
+                    </th:block>
                 </div>
             </div>
             <div class="col-9">
