--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="browse.html">Browse</a>
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signin">Sign In</a>
+                    <a class="nav-link" href="/signin/action/signout">Sign Out</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
