--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signin">Sign Out</a>
+                    <a class="nav-link" href="/signin/action/signout">Sign Out</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
