--- a/src/main/resources/templates/createaccount.html
+++ b/src/main/resources/templates/createaccount.html
@@ -60,6 +60,22 @@
                 <h2 class="form-signin-heading">Create Account</h2>
             </div>
             <div class="form-group">
+                <label for="inputFirstName" class="sr-only">First Name</label>
+                <input type="name" id="inputFirstName" class="form-control" placeholder="First Name" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputLastName" class="sr-only">Last Name</label>
+                <input type="name" id="inputLastName" class="form-control" placeholder="Last Name" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputPhoneNumber" class="sr-only">Phone Number</label>
+                <input type="text" id="inputPhoneNumber" class="form-control" placeholder="Phone Number" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress" class="sr-only">Address</label>
+                <input type="text" id="inputAddress" class="form-control" placeholder="Address" required="" autofocus="">
+            </div>
+            <div class="form-group">
                 <label for="inputEmail" class="sr-only">Email Address</label>
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required="" autofocus="">
             </div>
