--- a/src/main/resources/templates/manageaccount.html
+++ b/src/main/resources/templates/manageaccount.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Home</title>
+    <title>Account Management</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS -->
@@ -29,11 +29,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/index">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/browse">Browse</a>
+                    <a class="nav-link" href="browse">Browse</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -46,9 +46,6 @@
                         <a class="dropdown-item" href="manageaccount">Manage Account</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signin/action/signout">Sign Out</a>
-                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -57,29 +54,44 @@
         </div>
     </nav>
 
-    <!-- Home Page Content -->
-    <div class="container text-center py-5">
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <h3 class="card-header">Recent Orders</h3>
-                    <th:block th:each="order: ${orders}">
-	                    <div class="card-block">
-	                        <span class="card-text">Order #:</span>
-	                        <span class="card-text" th:text=${order.orderId}></span>
-	                    </div>
-                    </th:block>
-                </div>
+    <!-- Create Account Form -->
+    <div class="container text-center w-25 py-5">
+        <form>
+            <div class="form-group">
+                <h2 class="form-signin-heading">Manage Account</h2>
             </div>
-            <div class="col-9">
-                <div class="card">
-                    <h3 class="card-header">Featured Items</h3>
-                    <div class="card-block">
-                        <h4 class="card-title">No Items Available</h4>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label for="inputFirstName" class="col-form-label">First Name</label>
+                <input type="name" id="inputFirstName" class="form-control" placeholder="First Name" required="" autofocus="">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="inputLastName" class="col-form-label">Last Name</label>
+                <input type="name" id="inputLastName" class="form-control" placeholder="Last Name" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputPhoneNumber" class="col-form-label">Phone Number</label>
+                <input type="text" id="inputPhoneNumber" class="form-control" placeholder="Phone Number" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress" class="col-form-label">Address</label>
+                <input type="text" id="inputAddress" class="form-control" placeholder="Address" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputEmail" class="col-form-label">Email Address</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required="" autofocus="">
+            </div>
+            <div class="form-group">
+                <label for="inputPassword" class="col-form-label">New Password</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="New Password" required="">
+            </div>
+            <div class="form-group">
+                <label for="inputConfirmPassword" class="col-form-label">Confirm New Password</label>
+                <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Comfirm New Password" required="">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-dark btn-block" type="submit">Save Changes</button>
+            </div>
+        </form>
     </div>
 
 </body>
