--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Home</title>
+    <title>Orders</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS -->
@@ -29,13 +29,13 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/index">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/browse">Browse</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         My Account
@@ -60,23 +60,15 @@
     <!-- Home Page Content -->
     <div class="container text-center py-5">
         <div class="row">
-            <div class="col-3">
+            <div class="col-12">
                 <div class="card">
-                    <h3 class="card-header">Recent Orders</h3>
+                    <h3 class="card-header">Orders</h3>
                     <th:block th:each="order: ${orders}">
 	                    <div class="card-block">
 	                        <span class="card-text">Order #:</span>
 	                        <span class="card-text" th:text=${order.orderId}></span>
 	                    </div>
                     </th:block>
-                </div>
-            </div>
-            <div class="col-9">
-                <div class="card">
-                    <h3 class="card-header">Featured Items</h3>
-                    <div class="card-block">
-                        <h4 class="card-title">No Items Available</h4>
-                    </div>
                 </div>
             </div>
         </div>
