--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -42,8 +42,9 @@
                         My Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Orders</a>
-                        <a class="dropdown-item" href="#">Payment Methods</a>
+                        <a class="dropdown-item" href="orders">Orders</a>
+                        <a class="dropdown-item" href="payments">Payment Methods</a>
+                        <a class="dropdown-item" href="manageaccount">Manage Account</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -78,13 +79,13 @@
                             </div>
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="priceMin" class="col-6 col-form-label">Price Min:</label>
+                                    <label for="priceMin" class="col-4 col-form-label">Price Min:</label>
                                     <input type="number" id="priceMin" class="col-6 form-control" placeholder="Min">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="priceMax" class="col-6 col-form-label">Price Max:</label>
+                                    <label for="priceMax" class="col-4 col-form-label">Price Max:</label>
                                     <input type="number" id="priceMax" class="col-6 form-control" placeholder="Max">
                                 </div>
                             </div>
@@ -99,15 +100,15 @@
                     <div class="card-block">
                         <h4 th:if="${items.empty}" class="card-title">No Items Available</h4>
                         <div id="itemList">
-                        	<th:block th:each="item: *{items}">
-                        		<a th:href="@{/browse/itemdetails/{productId}(productId=${item.itemId})}">
-		                        	<div class="listItem">
-		                        		<div style="font-size:30px;text-align:center;margin: 30px 0;" th:text=${item.name}></div>
-		                        		
-		                        		<div class="itemPrice" th:text="'$' + ${#numbers.formatDecimal(item.price, 0, 'COMMA', 2, 'POINT')}" ></div>
-		                        	</div>
-                       			</a>
-	                        </th:block>
+                            <th:block th:each="item: *{items}">
+                                <a th:href="@{/browse/itemdetails/{productId}(productId=${item.itemId})}">
+                                    <div class="listItem">
+                                        <div style="font-size:30px;text-align:center;margin: 30px 0;" th:text=${item.name}></div>
+
+                                        <div class="itemPrice" th:text="'$' + ${#numbers.formatDecimal(item.price, 0, 'COMMA', 2, 'POINT')}"></div>
+                                    </div>
+                                </a>
+                            </th:block>
                         </div>
                     </div>
                 </div>
