Added submit button to payment method form.

--- a/src/main/resources/templates/payments.html
+++ b/src/main/resources/templates/payments.html
@@ -102,6 +102,10 @@
                                     <input type="date" id="inputExpirationDate" class="col-6 form-control">
                                 </div>
                             </div>
+                            <!-- Add Payment Button -->
+                            <div class="form-group w-50 mx-auto">
+                                <button class="btn btn-lg btn-dark btn-block" type="submit">Add Payment Method</button>
+                            </div>
                         </form>
                     </div>
                 </div>
