--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -42,19 +42,19 @@
                         My Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="orders">Orders</a>
-                        <a class="dropdown-item" href="payments">Payment Methods</a>
-                        <a class="dropdown-item" href="manageaccount">Manage Account</a>
+                        <a class="dropdown-item" href="/orders">Orders</a>
+                        <a class="dropdown-item" href="/manageaccount">Manage Account</a>
+                        <a class="dropdown-item" href="/cart">Cart</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signin/action/signout">Sign Out</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form>-->
         </div>
     </nav>
 
