--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -42,18 +42,19 @@
                         My Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Orders</a>
-                        <a class="dropdown-item" href="#">Payment Methods</a>
+                        <a class="dropdown-item" href="/orders">Orders</a>
+                        <a class="dropdown-item" href="/manageaccount">Manage Account</a>
+                        <a class="dropdown-item" href="/cart">Cart</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/signin/action/signout">Sign Out</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form>-->
         </div>
     </nav>
 
@@ -70,8 +71,6 @@
                         	<th:block th:each="item: *{items}">
 	                        	<div class="cartItem" style="position:relative; width: 100%;">
 	                        		<div style="display:inline-block;padding-left:30px; vertical-align:middle;font-size:30px;text-align:center;margin: 30px 0;" th:text=${item.name}></div>
-	                        		
-	                        		
 	                        		<div th:href="@{/browse/itemdetails/{productId}(productId=${item.itemId})}"
 	                        			style="display:inline-block; padding: 40px;" th:text="'$' + ${#numbers.formatDecimal(item.price, 0, 'COMMA', 2, 'POINT')}" ></div>
 	                        		<div style="display:inline-block;width:75px; margin: 40px;" th:text="'Qty: ' + ${item.quantity}"></div>
@@ -83,6 +82,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-8" style="text-align: right;position:relative">
+            	<div th:text="'Subtotal: $' + ${#numbers.formatDecimal(ordermodel.subtotal, 0, 'COMMA', 2, 'POINT')}"></div>
+            	<div th:text="'Total(8% tax + $5.95 shipping): $' + ${#numbers.formatDecimal(ordermodel.finalTotal, 0, 'COMMA', 2, 'POINT')}"></div>
+            	<a th:if="${!items.empty}" th:href="@{/cart/checkout}">
+            		<button style="right:0;position:absolute; margin-top:10px;"class="btn btn-lg btn-dark btn-block" type="submit">Checkout</button>
+            	</a>
             </div>
         </div>
     </div>
