--- a/src/main/resources/templates/payments.html
+++ b/src/main/resources/templates/payments.html
@@ -42,9 +42,10 @@
                         My Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="orders">Orders</a>
-                        <a class="dropdown-item active" href="payments">Payment Methods</a>
-                        <a class="dropdown-item" href="manageaccount">Manage Account</a>
+                        <a class="dropdown-item" href="/orders">Orders</a>
+                        <a class="dropdown-item" href="/manageaccount">Manage Account</a>
+                        <a class="dropdown-item active" href="/payments">Manage Payment Methods</a>
+                        <a class="dropdown-item" href="/cart">Cart</a>
                     </div>
                 </li>
                 <li class="nav-item">
