--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -36,7 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/browse">Browse</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         My Account
@@ -44,7 +44,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/orders">Orders</a>
                         <a class="dropdown-item" href="/manageaccount">Manage Account</a>
-                        <a class="dropdown-item" href="/cart">Cart</a>
+                        <a class="dropdown-item" href="/payments">Manage Payment Methods</a>
+                        <a class="dropdown-item active" href="/cart">Cart</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -68,27 +69,28 @@
                     <div class="card-block">
                         <h4 th:if="${items.empty}" class="card-title">No Items Available</h4>
                         <div id="itemList">
-                        	<th:block th:each="item: *{items}">
-	                        	<div class="cartItem" style="position:relative; width: 100%;">
-	                        		<div style="display:inline-block;padding-left:30px; vertical-align:middle;font-size:30px;text-align:center;margin: 30px 0;" th:text=${item.name}></div>
-	                        		<div th:href="@{/browse/itemdetails/{productId}(productId=${item.itemId})}"
-	                        			style="display:inline-block; padding: 40px;" th:text="'$' + ${#numbers.formatDecimal(item.price, 0, 'COMMA', 2, 'POINT')}" ></div>
-	                        		<div style="display:inline-block;width:75px; margin: 40px;" th:text="'Qty: ' + ${item.quantity}"></div>
-	                        		<a th:href="@{/cart/delete/{productId}(productId=${item.itemId})}">
-	                        		<button style="width: 47px;right:0; top:0; position:absolute; margin:25px;"class="btn btn-lg btn-dark btn-block" type="submit">X</button>
-	                        		</a>
-	                        	</div>
-	                        </th:block>
+                            <th:block th:each="item: *{items}">
+                                <div class="cartItem" style="position:relative; width: 100%;">
+                                    <div style="display:inline-block;padding-left:30px; vertical-align:middle;font-size:30px;text-align:center;margin: 30px 0;"
+                                        th:text=${item.name}></div>
+                                    <div th:href="@{/browse/itemdetails/{productId}(productId=${item.itemId})}" style="display:inline-block; padding: 40px;"
+                                        th:text="'$' + ${#numbers.formatDecimal(item.price, 0, 'COMMA', 2, 'POINT')}"></div>
+                                    <div style="display:inline-block;width:75px; margin: 40px;" th:text="'Qty: ' + ${item.quantity}"></div>
+                                    <a th:href="@{/cart/delete/{productId}(productId=${item.itemId})}">
+                                        <button style="width: 47px;right:0; top:0; position:absolute; margin:25px;" class="btn btn-lg btn-dark btn-block" type="submit">X</button>
+                                    </a>
+                                </div>
+                            </th:block>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-8" style="text-align: right;position:relative">
-            	<div th:text="'Subtotal: $' + ${#numbers.formatDecimal(ordermodel.subtotal, 0, 'COMMA', 2, 'POINT')}"></div>
-            	<div th:text="'Total(8% tax + $5.95 shipping): $' + ${#numbers.formatDecimal(ordermodel.finalTotal, 0, 'COMMA', 2, 'POINT')}"></div>
-            	<a th:if="${!items.empty}" th:href="@{/cart/checkout}">
-            		<button style="right:0;position:absolute; margin-top:10px;"class="btn btn-lg btn-dark btn-block" type="submit">Checkout</button>
-            	</a>
+                <div th:text="'Subtotal: $' + ${#numbers.formatDecimal(ordermodel.subtotal, 0, 'COMMA', 2, 'POINT')}"></div>
+                <div th:text="'Total(8% tax + $5.95 shipping): $' + ${#numbers.formatDecimal(ordermodel.finalTotal, 0, 'COMMA', 2, 'POINT')}"></div>
+                <a th:if="${!items.empty}" th:href="@{/cart/checkout}">
+                    <button style="right:0;position:absolute; margin-top:10px;" class="btn btn-lg btn-dark btn-block" type="submit">Checkout</button>
+                </a>
             </div>
         </div>
     </div>
