--- a/src/main/resources/templates/manageaccount.html
+++ b/src/main/resources/templates/manageaccount.html
@@ -35,14 +35,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="browse">Browse</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         My Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/orders">Orders</a>
-                        <a class="dropdown-item" href="/manageaccount">Manage Account</a>
+                        <a class="dropdown-item active" href="/manageaccount">Manage Account</a>
+                        <a class="dropdown-item" href="/payments">Manage Payment Methods</a>
                         <a class="dropdown-item" href="/cart">Cart</a>
                     </div>
                 </li>
