Updated recent orders panel

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,7 +2,7 @@
 	text-align:left !important;
 }
 .listItem {
-	width:200px;
+	width:32%;
 	height:200px;
 	display:inline-block;
 	border:1px solid gray;
