--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,10 +65,18 @@
                 <div class="card">
                     <h3 class="card-header">Recent Orders</h3>
                     <th:block th:each="order: ${orders}">
-                        <div class="card-block">
-                            <span class="card-text">Order #:</span>
-                            <span class="card-text" th:text=${order.orderId}></span>
-                        </div>
+	                    <div class="card-block" style="padding:10px;border-bottom: 1px solid gray; background: #fbfbfb;">
+	                        <div>
+	                        <b>
+	                        	<span class="card-text">Order #</span>
+	                       		<span class="card-text" th:text=${order.orderId}></span>
+	                        </b>
+	                       	</div>
+	                       	<div>
+	                       		<span class="card-text">Total:</span>
+	                       		<span class="card-text" th:text="'$' +${#numbers.formatDecimal(order.total, 0, 'COMMA', 2, 'POINT')}"></span>
+	                       	</div>
+	                    </div>
                     </th:block>
                 </div>
             </div>
