Updated expiration date form input

--- a/src/main/resources/templates/payments.html
+++ b/src/main/resources/templates/payments.html
@@ -100,7 +100,7 @@
                             <div class="form-group">
                                 <div class="row">
                                     <label for="inputExpirationDate" class="col-4 col-form-label">Expiration Date</label>
-                                    <input type="date" id="inputExpirationDate" class="col-6 form-control">
+                                    <input type="month" id="inputExpirationDate" class="col-6 form-control">
                                 </div>
                             </div>
                             <!-- Add Payment Button -->
