--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -67,29 +67,22 @@
                 <div class="card">
                     <h3 class="card-header">Filters</h3>
                     <div class="card-block">
-                        <form class="py-3">
-                            <div class="form-group">
-                                <label for="ratingFilter" class="col-form-label">Rating:</label>
-                                <select class="custom-select" id="ratingFilter">
-                                    <option value="1" selected>1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                </select>
-                            </div>
+                        <form class="py-3" style="padding-bottom:0 !important;">
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="priceMin" class="col-4 col-form-label">Price Min:</label>
-                                    <input type="number" id="priceMin" class="col-6 form-control" placeholder="Min">
+                                    <label for="search" class="col-4 col-form-label">Search:</label>
+                                    <input type="text" id="searchValue" class="col-6 form-control" placeholder="Search">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="priceMax" class="col-4 col-form-label">Price Max:</label>
+                                    <label for="priceMax" class="col-4 col-form-label">Max Price:</label>
                                     <input type="number" id="priceMax" class="col-6 form-control" placeholder="Max">
                                 </div>
                             </div>
+                            <div class="form-group" style="margin:0 !important;">
+ 								<button style="display:inline-block;margin-top:15px; margin-bottom:30px; width:200px;" class="btn btn-lg btn-dark btn-block" type="submit">Filter</button>
+                        	</div>
                         </form>
                     </div>
                 </div>
