--- a/src/main/resources/templates/browse.html
+++ b/src/main/resources/templates/browse.html
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index">Home</a>
+                    <a class="nav-link" href="/index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="browse">Browse</a>
+                    <a class="nav-link active" href="/browse">Browse</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -111,5 +111,8 @@
     </div>
 
 </body>
-
+<style>
+a:hover {
+text-decoration: none !important;}
+</style>
 </html>
